<resources>
    <string name="app_name">Wahapp</string>
    <string name="enter_email">Usuario/Mail</string>
    <string name="enter_pass">Introduce Contraseña</string>
    <string name="enter_confirmPass">Confirma tu contraseña</string>
    <string name="enter_your_password">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="inicia_sesion_con_google">Inicia sesion con Google</string>
    <string name="sign_up">sign up</string>
    <string name="profile">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="about_us">Sobre Waha</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="perfil">Perfil</string>
    <string name="sobre_wahapp">Sobre Wahapp</string>
    <string name="profileimage">ProfileImage</string>
    <string name="introduce_tu_nombre">Introduce tu Nombre</string>
    <string name="email">Email</string>
    <string name="cambia_tu_estado">Cambia tu Estado:</string>
    <string name="actualizar">Actualizar</string>
    <string name="editar">Editar</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cambiar_correo_electronico">Cambiar correo electronico</string>
    <string name="nickname">Nickname</string>
    <string name="contactos">Contactos</string>
    <string name="menuprincipal">menuPrincipal</string>
    <string name="nombre_del_usuario">Nombre del Usuario</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="estado_del_usuario">Estado del Usuario</string>
    <string name="escribe_un_mensage">Escribe un mensaje</string>
    <string name="todo">TODO</string>
    <string name="sending_message">Sending message</string>
    <string name="mensajes_recibidos">Mensajes recibidos</string>
    <string name="mensajes_enviados">Mensajes enviados</string>
    <string name="search">Search</string>
    <string name="_8_d_peta">8===D´ PETA</string>
    <string name="text">text</string>
    <string name="agregar_contacto">Agregar contacto</string>
</resources>