<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w1"
    android:orientation="vertical"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/user"
        android:layout_marginTop="50dp"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:civ_border_color="@color/micolor18"
        android:contentDescription="@string/profileimage"
        />

    <ImageView
        android:id="@+id/imgAddProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:src="@drawable/edit"
        android:layout_marginStart="35dp"
        android:contentDescription="@string/editar"
        />

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_nombre"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/micolor5"
        app:drawableStartCompat="@drawable/ic_account"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/nickname"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/micolor2"
        app:endIconTint="@color/micolor2"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/micolor2" />


    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/micolor5"
        app:drawableStartCompat="@drawable/ic_mail"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:hint="@string/cambiar_correo_electronico"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/micolor2"
        app:endIconTint="@color/micolor2"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/micolor2" />


    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtProfileStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cambia_tu_estado"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_Status"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/cambia_tu_estado"

        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/micolor2"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"
            android:textColor="@color/micolor2" />


    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:padding="10dp"
        android:textSize="15sp"
        android:text="@string/actualizar"
        android:textColor="@color/white"
        android:background="@color/micolor18"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="gone"
        android:textSize="15sp"
        android:text="@string/guardar_cambios"
        android:textColor="@color/white"
        android:background="@color/micolor13"
        />
    <ProgressBar
        android:id="@+id/profileProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

</LinearLayout>