<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/w4"
    tools:context=".SignUp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_email"
        android:textColorHint="@color/micolor2"
        app:boxStrokeColor="@color/micolor2"
        app:endIconTint="@color/micolor2"
        app:endIconMode="clear_text"
        app:startIconTint="@color/micolor2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSign_Up_Email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/micolor2" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_pass"
        android:layout_below="@+id/signUp_Email"
        android:textColorHint="@color/micolor2"
        app:boxStrokeColor="@color/micolor2"
        app:endIconTint="@color/micolor2"
        app:startIconTint="@color/micolor2"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSign_Up_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/micolor2" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_Confirm_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/enter_confirmPass"
            android:layout_below="@+id/signUp_Password"
            android:textColorHint="@color/micolor2"
            app:boxStrokeColor="@color/micolor2"
            app:endIconTint="@color/micolor2"
            app:startIconTint="@color/micolor2"
            app:endIconMode="password_toggle"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignUp_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/micolor2" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUp_Confirm_Password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/micolor18"
        android:text="@string/sign_up"
        android:textColor="@color/micolor6"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="ObsoleteLayoutParam" />
    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
    />
</LinearLayout>
</ScrollView>