<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#0000"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:padding="0dp"
    app:cardCornerRadius="0sp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/infoUserLayout"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUserProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/profileimage"
            android:src="@drawable/user"
            app:cardElevation="20dp"
            app:civ_border_color="@color/teal_200"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@id/userLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/userPhotoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/imgUserProfileImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/userDataLayout"
        android:layout_width="158dp"
        android:layout_height="73dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/addButtonLayout"
        app:layout_constraintStart_toEndOf="@+id/infoUserLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/imgUserProfileImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/nombre_del_usuario"
            android:padding="2dp"
            android:textColor="@color/micolor18"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:hint="@string/estado_del_usuario"
            android:padding="2dp"
            android:textColor="@color/micolor6"
            android:textSize="16sp"
            android:textStyle="normal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addButtonLayout"
        android:layout_width="82dp"
        android:layout_height="78dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf=""
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="248dp">

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:orientation="vertical"
            android:layout_constraintStart_toStartOf="@id/userData"
            app:layout_constraintLeft_toRightOf="@id/imgUserProfileImage"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btAgreeContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:src="@drawable/send"

            android:padding="2dp"
            android:textSize="16sp"
            android:textStyle="normal"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>